--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <table border="1" align="center" width="80%">
 <tr>
 <td colspan="2" height="100" align="center">
-<font size="16" face="Arial">Pencegahan Virus Corona/Covid-19</font>
+<font yang size="16" face="Arial">Pencegahan Virus Corona/Covid-19</font yang>
 </td>
 </tr>
 </table>
