--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <html>
 <head>
-<title>COVID-19</title>
+<title>Covid-19</title>
 </head>
 <body>
-<table border="1" align="center" width="80%">
+<table Border="1" align="center" width="100%" height="100%">
 <tr>
-<td colspan="2" height="100" align="center">
-<font size="16" face="Arial">Pencegahan Virus Corona/Covid-19</font>
+<td bg color="blue" colspan="2" height="100" align="center">
+<font size="16" face="Arial">PENCEGAHAN VIRUS COVID-19</font>
+</td>
+</tr>
+<tr>
+<td>
+<br>Halo sobat semua,selamat datang di cara PENCEGAHAN VIRUS COVID-19</br>
+<br>Berikut merupakan 10 cara sederhana yang dapat anda lakukan di rumah dalam pencegahan virus COVID-19:</br>
+<br>1.Cuci Tangan</br>
+<br>Tindakan pertama yang dapat dilakukan untuk menangkal virus Corona adalah dengan rajin mencuci tangan.Sebab,cuci tangan adalah salah satu anggota tubuh yang menjadi sumber penyakit.Cuci tangan dengan durasi minimal 20 detik untuk membunuh virus Corona menggunakan sabun dan air bersih yang mengalir.Setelah itu,keringkan tangan menggunakan kain yang bersih atau tisu</br>
+<br>2.Hindari Sentuh WAJAH</br>
+<br>Telah diketahui bahwa tangan dapat menjadi sumber penyakit sebab sering terjadi kontak dengan benda maupun orang lain.Sementara itu,virus Corona disinyalir dapat masuk tubuh manusia melalui segitiga wajah yakni mata,hidung,dan,mulut.Maka dari itu,hindari untuk menyentuh wajah menggunakan tangan.</br>
 </td>
 </tr>
 </table>
 </body>
 </html>
-	
