--- a/index.html
+++ b/index.html
@@ -13,10 +13,26 @@
 <td>
 <br>Halo sobat semua,selamat datang di cara PENCEGAHAN VIRUS COVID-19</br>
 <br>Berikut merupakan 10 cara sederhana yang dapat anda lakukan di rumah dalam pencegahan virus COVID-19:</br>
-<br>1.Cuci Tangan</br>
+<br>1. Cuci Tangan</br>
 <br>Tindakan pertama yang dapat dilakukan untuk menangkal virus Corona adalah dengan rajin mencuci tangan.Sebab,cuci tangan adalah salah satu anggota tubuh yang menjadi sumber penyakit.Cuci tangan dengan durasi minimal 20 detik untuk membunuh virus Corona menggunakan sabun dan air bersih yang mengalir.Setelah itu,keringkan tangan menggunakan kain yang bersih atau tisu</br>
-<br>2.Hindari Sentuh WAJAH</br>
+<br>2. Hindari Sentuh Wajah </br>
 <br>Telah diketahui bahwa tangan dapat menjadi sumber penyakit sebab sering terjadi kontak dengan benda maupun orang lain.Sementara itu,virus Corona disinyalir dapat masuk tubuh manusia melalui segitiga wajah yakni mata,hidung,dan,mulut.Maka dari itu,hindari untuk menyentuh wajah menggunakan tangan.</br>
+<br>3. Etika bersin dan batuk</br>
+<br>Terapkan etika bersin dan batuk dengan benar menggunakan siku tangan bagian dalam atau tisu bersih. Sebab, cairan yang diproduksi pada saat batuk dan bersin dapat menjadi penularan virus corona. Apabila anda menggunakan tisu, maka segera buang ke tempat sampah dan cuci tangan menggunakan sabun hingga bersih dan kering kembali. </br>
+<br>4. Memakai Masker</br>
+<br>virus corona tidak menyebar melalui udara. Namun, penggunaan masker dapat meminimalisir penularan virus corona. Sebab, virus corona dapat menyebar melalui droplets dan dapat masuk kedalam tubuh melalui selaput lender seperti mata, mulut, dan hidung. Masker juga dapat digunakan ketika seseorang dalam kondisi yabg kurang sehat. Hindari untuk menggunakan satu masker secara berulang-ulang. Sebab, masker dapat mengandung berbagai jenis kuman, bakteri, dan virus setelah dipakai. </br>
+<br>5. Hindari Interaksi Langsung</br>
+<br>cara sederhana guna menangkal virus corona yang kelima adalah hindari interaksi langsung seperti berpelukan, berjabat tangan, dan lain sebagainya. Dengan menghindari kontak langsung dengan orang lain, maka Anda dapat mengurangi penyebaran virus corona. </br>
+<br>6. Hindari Berbagi Barang Pribadi</br>
+<br>Barang pribadi milik orang lain dapat saja meningkatkan risiko penularan virus corona. Sebab meskipun tidak nampak gejala, virus ini dapat menginfeksi tubuh manusia hingga berstatus sebagai silent carrier yang membawa dan menularkan virus corona covid-19 kepada orang lain. </br>
+<br>7. Social Distancing </br>
+<br>Social atau physical distancing adalah salah satu imbauan yang sering digunakan oleh berbagai pihak. Sebab, dengan menjaga jarak satu sama lain dipercaya dapat mengurangi resiko penyebaran virus corona. Selalu perhatikan jarak fisik dengan orang lain yakni minimal 1 meter. Langkah ini dapat diterapkan saat berada ditempat umum ataupun saat diluar rumah guna menangkal virus masuk kedalam tubuh dan menyebabkan masalah kesehatan yang serius. </br>
+<br>8. Cuci Bahan Makanan</br>
+<br>Cuci selalu bahan makanan yang diperoleh sebelum mengolahnya. Sebab, pada bahan makanan selalu saja terdapat kemungkinan adanya kuman, bakteri, hingga virus corona. Anda dapat mencuci bahan makanan sebelum disimpan didalam lemari pendingin dengan menggunakan larutan hidrogen peroksida taupun cuka yang dapat membunuh bakteri, kuman, dan virus dengan cukup efektif.</br>
+<br>9. Bersihkan Perabot Rumah</br>
+<br>Virus corona dapat menempel pada permukaan benda yang sering terjadi interaksi. Maka dari itu, bersihkan selalu perabotan rumah secara rutin. Bila perlu, semprotlan cairan disinfektan setiap pagi dan sore hari sebelum dan setelah beraktivitas guna membunuh virus corona. </br>
+<br>10. Tingkatkan Imun Tubuh</br>
+<br>Tidak hanya melakukan tindakan pencegahan diluar tapi juga didalam. Caranya adalah dengan meningkatkan imunitas atau sistem kekebalan tubuh terhadap berbagai virus termasuk virus corona. Beberapa cara yang dapat dilakukan untuk meningkatkan imunitas tubuh adalah dengan melakukan aktivitas fisik secara rutin dan mengonsumsi makanan sehat yang dapat meningkatkan sistem kekebalan tubuh. </br>
 </td>
 </tr>
 </table>
