--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <br>Virus corona dapat menempel pada permukaan benda yang sering terjadi interaksi. Maka dari itu, bersihkan selalu perabotan rumah secara rutin. Bila perlu, semprotlan cairan disinfektan setiap pagi dan sore hari sebelum dan setelah beraktivitas guna membunuh virus corona. </br>
 <br>10. Tingkatkan Imun Tubuh</br>
 <br>Tidak hanya melakukan tindakan pencegahan diluar tapi juga didalam. Caranya adalah dengan meningkatkan imunitas atau sistem kekebalan tubuh terhadap berbagai virus termasuk virus corona. Beberapa cara yang dapat dilakukan untuk meningkatkan imunitas tubuh adalah dengan melakukan aktivitas fisik secara rutin dan mengonsumsi makanan sehat yang dapat meningkatkan sistem kekebalan tubuh. </br>
+<br><p><center><b><i> #DIRUMAHAJA #STAYATHOME #JAGAPOLAHIDUPSEHAT </i></b></center></p> </br>
 </td>
 </tr>
 </table>
