--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Covid-19</title>
 </head>
 <body>
-<table Border="1" align="center" width="100%" height="100%">
+<table Border="1" align="center" width="100%" height="100%" bgcolor="yellow">
 <tr>
 <td bg color="blue" colspan="2" height="100" align="center">
 <font size="16" face="Arial">PENCEGAHAN VIRUS COVID-19</font>
