--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <title>Covid-19</title>
 </head>
 <body>
-<table Border="1" align="center" width="100%" height="100%" bgcolor="yellow">
+<table Border="1" align="center" width="100%" height="100%">
 <tr>
-<td bg color="pink" colspan="2" height="100" align="center">
+<td bg color="yellow" colspan="2" height="100" align="center">
 <font size="16" face="Arial">PENCEGAHAN VIRUS COVID-19</font>
 </td>
 </tr>
 <tr>
-<td>
+<td bgcolor="pink">
 <br>Halo sobat semua,selamat datang di cara PENCEGAHAN VIRUS COVID-19</br>
 <br>Berikut merupakan 10 cara sederhana yang dapat anda lakukan di rumah dalam pencegahan virus COVID-19:</br>
 <br>1. Cuci Tangan</br>
