--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
 <table Border="1" align="center" width="100%" height="100%">
 <tr>
-<td bg color="green" colspan="2" height="100" align="center">
-<font size="16" face="Arial">PENCEGAHAN VIRUS COVID-19</font>
+<td bgcolor="yellow" colspan="2" height="100" align="center">
+<font size="16" face="Arial">PENCEGAHAN VIRUS CORONA/COVID-19</font>
 </td>
 </tr>
 <tr>
